Fix App creation ui not showing all available apps

--- a/scripts/createQuizApp/components/views/CQViewCreateApp/_CQViewCreateAppStyles.scss
+++ b/scripts/createQuizApp/components/views/CQViewCreateApp/_CQViewCreateAppStyles.scss
@@ -21,4 +21,6 @@
 .cq-apptemplate {
     padding: 20px;
     min-height: 600px;
+    height: 100%;
+    overflow: scroll;
 }
